test/error/LexLiteralHexTrailingLetters.fu
public static class Test
{
	public static bool Run()
	{
		0 .. 0xfoo; //ERROR: Invalid integer
		return true;
	}
}
